package peano.objetos;

public enum DireccionFigura {
    ARRIBA,
    DERECHA,
    ABAJO,
    IZQUIERDA
}
