package peano.objetos;

import java.awt.*;

public interface IDibujador {
        public void dibujar(int x, int y, Graphics g);
}
